<resources>
    <string name="app_name">BakingApp</string>

    <string name="ingredients">Ingredients</string>
    <string name="add_widget">Add widget</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
</resources>
