<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.RecyclerView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recyclerView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        tools:context="me.asl.assel.bakingapp.ui.MainActivity">

    </android.support.v7.widget.RecyclerView>

</FrameLayout>
